--- a/pretrain-corpora/Crawlers and Process/Preprocess/PanamaProcess.ipynb
+++ b/pretrain-corpora/Crawlers and Process/Preprocess/PanamaProcess.ipynb
@@ -1229,6 +1229,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.mkdir(cwd + '/json/')\n",
+    "os.mkdir(cwd + '/tar/')\n",
+    "\n",
     "for i in df.source.unique():\n",
     "    os.mkdir(cwd + '/json/'+i)\n",
     "    os.mkdir(cwd + '/tar/'+i)  "
@@ -1714,7 +1717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
